feat(game): refactor game components, add accessibility, snackbar, and improve services
- Completed game component refactoring for consistent structure and behavior
- Added and improved accessibility (ARIA roles, labels, keyboard navigation)
- Implemented snackbar notifications for user feedback
- Enhanced responsiveness across different screen sizes
- Migrated data storage and state management from services to NgRx store
- Organized and clarified utility functions and constants
- Improved services to support reactive state handling and reusability

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,24 @@
 @if (dialog.activeContent()) {
-  <app-dialog >
-    
-  </app-dialog>
-
+  <app-dialog/>
 }
 
-<div>
+@if (snackBarHandler.snackbarContent().length) {
+  <app-snack-bar/>
+}
+
+<div role="application">
   <header appHeader>
-    <h1>Let's play</h1>
+    @if (winner()) {
+      <div id="own-app-ephasize-div" aria-live="polite">
+        <span>Winner: "{{winner()}}"</span>
+        <button (click)="startNewGame()" class="own-basic-button">New game</button>
+      </div>
+    }
+    @else {
+      <h1>Let's play</h1>
+    }
   </header>
   <main>
-    <router-outlet></router-outlet>
+    <router-outlet/>
   </main>
 </div>
