--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use "./app/shared/styles/titles" as titles;
 @use "./app/shared/styles/font-family";
 @use "./app/shared/styles/theme" as theme;
-@use "./app/shared/styles/button" as btn;
+//@use "./app/shared/styles/button" as btn;
 @use "./app/shared/styles/full-frame-animation" as frame-animation;
 @use "./app/shared/styles/color-levels" as levels;
 
@@ -11,7 +11,7 @@ $scheme: dark light;
 
 @include titles.rows();
 @include font-family.special-font-family("Quicksand");
-@include btn.basic_button($scheme);
+
 @include frame-animation.create-animation-class($scheme);
 @include theme.create-color-system(
   levels.$gray-levels,
@@ -40,27 +40,9 @@ body {
   box-sizing: border-box;
   background: var(--theme-background);
   color: var(--n-120);
-}
 
-.own-header-material-icons {
-  padding: 10px;
-  display: flex;
-  cursor: pointer;
-  border: 2px outset var(--p-30);
-  color: var(--p-110);
-  border-radius: 1000px;
-  background-image: linear-gradient(
-    var(--gradient-p-component),
-    var(--gradient-a-component)
-  );
-  font-size: 1.6vw;
-  user-select: none;
-  transition: all ease-in-out 0.4s;
-  &:hover {
-    scale: 1.1;
-  }
-  &:active {
-    scale: 0.8;
+  &::selection {
+    background-color: var(--a-10);
   }
 }
 
@@ -149,7 +131,7 @@ form {
 
       &:focus {
         outline: none;
-         border: 2px outset var(--p-50);
+        border: 2px outset var(--p-50);
       }
 
       &::-webkit-color-swatch-wrapper {
