--- a/src/app/components/dialog/dialog.scss
+++ b/src/app/components/dialog/dialog.scss
@@ -1,8 +1,12 @@
+@use "../../shared/styles/button" as btn;
+$scheme: dark light;
+@include btn.basic_button($scheme);
+
 #own-dialog-background {
   top: 0;
   left: 0;
   position: fixed;
-  z-index: 100;
+  z-index: 90;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -29,7 +33,7 @@
   min-width: 400px;
   border-radius: 10px;
   background-color: var(--n-0);
-  z-index: 100;
+  z-index: 91;
   border: 2px outset light-dark(var(--n-20), var(--n-120));
   padding: 10px;
   box-sizing: border-box;
@@ -44,15 +48,6 @@
   align-items: center;
   justify-content: space-between;
   font-size: max(20px, 1.8vw);
-
-  & span:last-child {
-    cursor: pointer;
-    transition: all ease-in-out 0.2s;
-
-    &:hover {
-      scale: 1.3;
-    }
-  }
 }
 
 #own-action-div {
@@ -76,4 +71,26 @@
   color: red;
   transition: all ease-in 0.3s;
   font-style: italic;
+}
+
+svg {
+  fill: var(--n-110);
+  cursor: pointer;
+  height: 100%;
+  transition: all ease-in-out 0.2s;
+
+  &:hover {
+    scale: 1.3;
+  }
+}
+
+#own-dialog-close-button{
+  border-radius: 1000px;
+  border: none;
+  padding: max(10px, 0.8vw);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--n-0);
+
 }
