--- a/src/app/components/game/game-display-part/game-display-part.scss
+++ b/src/app/components/game/game-display-part/game-display-part.scss
@@ -1,18 +1,145 @@
+:host {
+  width: 100%;
+  height: 95%;
+  background-color: var(--n-0);
+  border-radius: 10px;
+  display: grid;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  justify-self: center;
+  grid-template-rows: 3fr 4fr 3fr;
+}
+
 div {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.own-results-ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .own-display-title {
-
-  
   align-items: center;
   justify-content: center;
   font-size: 1.8vw;
+  user-select: none;
   font-weight: bolder;
+}
 
-}
 .own-display-content {
+  display: flex;
+  justify-content: center;
+  font-size: 1.6vw;
+  color: light-dark(var(--p-110), var(--p-80));
+  font-weight: bolder;
+  width: 100%;
+
+  .own-result-li {
+    width: 90%;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: max(10px, 1vw);
+    box-sizing: border-box;
+    padding: 0 max(10px, 1vw);
+    border-bottom: 2px solid light-dark(var(--p-110), var(--p-80));
+  }
 }
-.own-display-footertitle {
+
+.own-display-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: light-dark(var(--p-110), var(--p-80));
+  font-weight: bolder;
+  font-size: 1.6vw;
+}
+
+@media (max-width: 1400px) {
+  .own-display-title {
+    font-size: 2vw;
+  }
+  .own-display-content {
+    font-size: 1.8vw;
+  }
+  .own-display-footer {
+    font-size: 1.8vw;
+  }
+}
+
+@media (max-width: 1200px) {
+  .own-display-title {
+    font-size: 2.2vw;
+  }
+  .own-display-content {
+    font-size: 2vw;
+  }
+  .own-display-footer {
+    font-size: 2vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .own-display-title {
+    grid-row: 1/3;
+    font-size: 2vw;
+  }
+  .own-results-ul {
+    flex-direction: row;
+  }
+
+  .own-display-content {
+    grid-row: 1;
+    font-size: 1.8vw;
+    flex-direction: row;
+  }
+  :host {
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 4fr 6fr;
+  }
+
+  .own-result-li {
+    padding: 0 10px !important;
+  }
+  .own-display-footer {
+    font-size: 1.8vw;
+  }
+}
+
+@media (max-width: 800px) {
+  .own-display-title {
+    font-size: 2.1vw;
+  }
+  .own-display-content {
+    font-size: 1.9vw;
+  }
+  .own-display-footer {
+    font-size: 2.5vw;
+  }
+}
+@media (max-width: 600px) {
+  .own-display-title {
+    font-size: 3.5vw;
+  }
+  .own-display-content {
+    font-size: 3.3vw;
+  }
+  .own-display-footer {
+    font-size: 3.3vw;
+  }
 }
