--- a/src/app/components/game/game.scss
+++ b/src/app/components/game/game.scss
@@ -2,22 +2,9 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
-  gap: 20px;
-  align-items: center;
-}
+  grid-template-columns: repeat(20, 1fr);
 
-.own-game-side-div {
-  width: 100%;
-  height: 90%;
-  background-color: var(--n-0);
-  border-radius: 10px;
-  display: grid;
-  flex-direction: column;
   align-items: center;
-  position: relative;
-  justify-self: center;
-  grid-template-rows: 20% 60% 20%;
 }
 
 .own-game-unchosen-side-div {
@@ -44,9 +31,12 @@
   display: grid;
   width: 100%;
   height: 90%;
-  gap: max(10px, 1vw);
+  gap: max(4px, 0.1vw);
   box-sizing: border-box;
   padding: 0 15%;
+  align-items: center;
+  justify-content: center;
+  grid-column: 4/18;
 }
 
 span {
@@ -58,4 +48,43 @@ span {
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 1400px) {
+  #own-game-filed-container {
+    padding: 0 5%;
+  }
+}
+
+@media (max-width: 1200px) {
+  #own-game-filed-container {
+    padding: 0 4%;
+  }
+}
+
+@media (max-width: 1000px) {
+  #own-game-container {
+    grid-template-rows: 1fr 9fr;
+  }
+
+  #own-game-filed-container {
+    grid-row: 2;
+    grid-column: 1/21;
+    padding: 0 10%;
+  }
+}
+
+@media (max-width: 800px) {
+  #own-game-filed-container {
+    padding: 0 5%;
+  }
+}
+@media (max-width: 600px) {
+  #own-game-filed-container {
+    padding: 0 0;
+  }
+
+  #own-game-container {
+    grid-template-rows: 1fr 8fr 1fr;
+  }
 }
