--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-@if (dialog.activeContent()) {
+@if (dialog.actualContent()) {
   <app-dialog/>
 }
 
@@ -8,15 +8,7 @@
 
 <div role="application">
   <header appHeader>
-    @if (winner()) {
-      <div id="own-app-ephasize-div" aria-live="polite">
-        <span>Winner: "{{winner()}}"</span>
-        <button (click)="startNewGame()" class="own-basic-button">New game</button>
-      </div>
-    }
-    @else {
-      <h1>Let's play</h1>
-    }
+   
   </header>
   <main>
     <router-outlet/>
