feat(account): enable changing user email and password via dialogs

--- a/src/app/components/account/account-header/account-header.html
+++ b/src/app/components/account/account-header/account-header.html
@@ -1,6 +1,6 @@
 <div>
-  <button class="own-basic-button">Change password</button>
-  <button class="own-basic-button">Change email</button>
+  <button class="own-basic-button" (click)="changePassword()">Change password</button>
+  <button class="own-basic-button" (click)="changeEmail()">Change email</button>
 </div>
 
 <div>
