feat(account): add game saving, enhance Account component, expand reducer, fix minor bugs
- Added functionality to save games, including backend integration and state updates
- Improved Account component
- Extended reducer to manage additional game-related actions and state slices
- Fixed minor UI and logic bugs

--- a/src/app/components/account/account.html
+++ b/src/app/components/account/account.html
@@ -13,9 +13,8 @@
   ></section>
 
   <section
-    appLoader
+    appGameHandler
     [savedGames]="savedGames()"
-    (deleteEvent)="deleteGame($event)"
-    (loadeEvent)="loadGame($event)"
+    (deletedGameEvent)="loadSavedGames()"
   ></section>
 </div>
