test(account): improve coverage and fix failing tests in account components
- Added unit tests for Account component and related subcomponents
- Fixed broken or flaky test cases
- Improved test descriptions and consistency

--- a/src/app/components/account/account.html
+++ b/src/app/components/account/account.html
@@ -1,3 +1,4 @@
+@if (user()) {
 <div id="own-account-container-div">
   <section 
   appAccountHeader 
@@ -14,7 +15,10 @@
 
   <section
     appGameHandler
+    id="own-game-handler-section"
     [savedGames]="savedGames()"
     (deletedGameEvent)="loadSavedGames()"
   ></section>
 </div>
+
+}
