--- a/src/app/components/account/operations/paginator/paginator.html
+++ b/src/app/components/account/operations/paginator/paginator.html
@@ -1,6 +1,6 @@
 <span>
   @if (pageCount() && page()!==1) {
-  <button (click)="setPage(1)">
+  <button (click)="setPage(1)" name="arrow_1">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
       <path
         d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
@@ -12,7 +12,7 @@
 
 <span>
   @if (pageCount() && page()!==1) {
-  <button (click)="setPage(page()-1)">
+  <button (click)="setPage(page()-1)" name="arrow_2">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
       <path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z" />
     </svg>
@@ -23,8 +23,8 @@
 <span>{{page()}}</span>
 
 <span>
-  @if (pageCount() && page()!==pageCount()) {
-  <button (click)="setPage(page()+1)">
+  @if (pageCount() && page()<pageCount()) {
+  <button (click)="setPage(page()+1)" name="arrow_3">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
       <path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z" />
     </svg>
@@ -33,13 +33,13 @@
 </span>
 
 <span>
-  <button (click)="setPage(pageCount())">
-    @if (pageCount() && page()!==pageCount()) {
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
-      <path
-        d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z"
-      />
-    </svg>
-    }
-  </button>
+  @if (pageCount() && page()<pageCount()) {
+    <button (click)="setPage(pageCount())" name="arrow_4">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
+        <path
+          d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z"
+        />
+      </svg>
+    </button>
+  }
 </span>
